# File-Storage-Rust

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.cursor/rules/: projeto-file-storage.mdc
armazenamento/e09fabf2-f757-4ba6-b51b-0880c82d031b/: d06a5fba-5a93-48cb-a2e8-2f563eb7e5dc
deploy/: file-storage.service.example
docs/: USO.md
migrations/: 0001_create_arquivos.sql  0002_multi_tenant.sql  0003_arquivos_rls.sql
postman/: FileStorege.postman_collection.json
src/: contexto.rs  lib.rs  main.rs
src/config/: mod.rs
src/controllers/: admin_controller.rs  arquivo_controller.rs  mod.rs  saude_controller.rs
src/dtos/: arquivo_dto.rs  mod.rs  projeto_dto.rs
src/erros/: mod.rs
src/middlewares/: admin.rs  mod.rs  projeto.rs
src/models/: arquivo_modelo.rs  mod.rs  projeto_modelo.rs
src/repositories/: arquivo_repository.rs  mod.rs  projeto_repository.rs
src/rotas/: mod.rs
src/services/: arquivo_service.rs  mod.rs  projeto_service.rs
tests/: multi_tenant_isolation.rs
tests/common/: mod.rs
