[package]
name = "file_storage_service"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15"
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
mime_guess = "2"
mime = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "migrate",
    "macros",
    "uuid",
    "chrono",
] }
tower-http = { version = "0.5", features = ["limit", "add-extension"] }
tokio-util = { version = "0.7", features = ["io", "codec"] }
futures-util = "0.3"
